raffia/tests/error/qualified-rule/missing-ending.snap
---
source: raffia/tests/error.rs
---
error: expect token `}`, but found `<eof>`
  ┌─ missing-ending.css:2:1
  │
2 │ 
  │ ^


